--- a/install
+++ b/install
@@ -62,7 +62,8 @@ sudo systemctl restart redis
 sudo systemctl stop redis
 
 redis-cli - запускаємо редіс
-     після того як запустили redis прописуєм команду redis memory
+     після того як запустили redis прописуєм команду 
+     >info memory
 
 Вставить конфиг в common/config/main-local.php
  'cache' => [
